--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
   <meta name="generator" content="Hugo 0.79.1" />
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>{{ site.title }}</title>
-  <meta name="description" content="Loji44&#39;s Blog. Focus on Java, Linux, Git, Vim, Open Source and so on." />
+  <title>{{ page.title }} | {{ site.title }}</title>
+  <meta name="description" content="Loji44&#39;s Blog. Focus on Java, Linux, Golang, Git, Vim, Docker, etc." />
   <meta name="viewport" content="width=device-width" />
   <link href="/favicon.png" rel="icon">
-  <link rel="alternate" type="application/rss+xml" title="Blog·Tanky Woo" href="https://blog.tankywoo.com/feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
   <link rel="stylesheet" href="{{ site.baseurl }}/static/css/github.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/static/css/style.css" />
 
