--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -8,7 +8,7 @@
       <div class="site">
         <div class="tags_cloud">
           {% for tag in site.tags %}
-            <a href="/tags/{{ tag | first }}.html?tag=1">
+            <a href="/tags/{{ tag | first }}.html">
               {{ tag | first }}<small>&nbsp;[{{ tag | last | size }}]</small>
             </a>
           {% endfor %}
