--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -12,7 +12,7 @@
       &nbsp;&#93;
     </span>
     <span class="page_meta_date">
-        &#91;&nbsp;{{ page.date | date_to_string }}&nbsp;&#93;
+        &#91;&nbsp;{{ page.date | date_to_long_string }}&nbsp;&#93;
     </span>
   </div>
 </div>
