--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,9 @@
 <!-- 全局顶部导航栏 -->
 <div class="header">
   <span class="title"><a href="/">{{ site.title }}</a></span>
-  &#47;&nbsp;<a class="extra" href="/about.html">ABOUT</a>
-  &#47;&nbsp;<a class="extra" href="/tags.html">TAGS</a>
-  &#47;&nbsp;<a class="extra" href="/feed.xml">RSS</a>
+  {% for nav in site.nav %}
+    {% assign nav_name = nav | split: '=' | first %}
+    {% assign nav_url = nav | split: '=' | last %}
+    &#47;&nbsp;<a class="extra" href="{{ nav_url }}">{{ nav_name }}</a>
+  {% endfor %}
 </div>
