--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,12 @@
   <meta name="description" content="Loji44&#39;s Blog. Focus on Java, Linux, Golang, Git, Vim, Docker, etc." />
   <meta name="viewport" content="width=device-width" />
   <link href="/favicon.png" rel="icon" />
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
   <link rel="stylesheet" href="{{ site.baseurl }}/static/css/github.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/static/css/style.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/static/css/search.css" />
 
   <script src="//cdn.staticfile.org/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/static/js/is.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/static/js/main.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/static/js/search.js" defer="true"></script>
 </head>
