--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,6 +118,10 @@ hr {
   border-bottom: 1px dashed #999;
 }
 
+.footer a:hover {
+  border-bottom: 1px dashed #999;
+}
+
 /*****************************************************************************/
 /* Site
 /*****************************************************************************/
