--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -7,7 +7,9 @@
     <span class="page_meta_tags">
       &#91;&nbsp;
       {% for tag in page.tags %}
-        <a class="extra" href="/tags/{{ tag }}.html">#{{ tag }}</a>
+        <!-- '/'和空格转换成'-'、tag英文转换成小写字母 -->
+        {% assign tag_url = tag | first | downcase | replace: "/", "-" | replace: " ", "-" %}
+        <a class="extra" href="/tags/{{ tag_url }}.html">#{{ tag }}</a>
       {% endfor %}
       &nbsp;&#93;
     </span>
