--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -8,9 +8,9 @@
       <div class="site">
         <div class="tags_cloud">
           {% for tag in site.tags %}
-            <!-- '/'、空格转换成 '-' -->
+            <!-- '/'和空格转换成'-'、tag英文转换成小写字母 -->
             {% assign tag_url = tag | first | downcase | replace: "/", "-" | replace: " ", "-" %}
-            <a href="/tags/{{ tag_url }}.html">
+            <a class="extra" href="/tags/{{ tag_url }}.html">
               {{ tag | first }}<small>&nbsp;[{{ tag | last | size }}]</small>
             </a>
           {% endfor %}
