--- a/static/css/style.css
+++ b/static/css/style.css
@@ -235,7 +235,7 @@ div#home {
 
 .post h1, .post h2, .post h3, .post h4, .post h5, .post h6 {
   color: #666;
-  font-weight: 300;
+  /* font-weight: 300; */
 }
 
 /* standard */
